kubernetes/project2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2-deployment 
  namespace: teamww
  labels:
    name: project2-app 
spec:  
  replicas: 2
  minReadySeconds: 5
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: project2-app
  template:
    metadata:
      labels:
        app: project2-app
    spec:
      containers:
      - name: project2-container
        image: jorgemongelos/project2:latest 
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "150m"
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /logs
            name: logs
      - name: promtail-container
        image: grafana/promtail
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        args:
        - -config.file=/etc/promtail/promtail.yml
        volumeMounts:
        - name: logs
          mountPath: /logs
        - name: promtail-config
          mountPath: /etc/promtail
      volumes:
        - name: logs
          emptyDir: {}
        - name: promtail-config
          configMap:
            name: promtail-config
